Update gitversion config

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,6 +1,12 @@
 mode: ContinuousDeployment
 branches: 
-    develop:
-        tag: dev
     master:
         mode: ContinuousDelivery
+        increment: Patch
+        prevent-increment-of-merged-branch-version: true
+        track-merge-target: false
+    develop:
+        tag: dev
+        increment: Minor
+        prevent-increment-of-merged-branch-version: false
+        track-merge-target: true
